clusters/managed/default/docs/redis_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
