clusters/managed/default/docs/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docs-ingress
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: "Host(`docs.trusted.nirmalhk7.com`)"
      kind: Rule
      services:
        - name: docs-docsmost
          port: 3000
      middlewares:
        # - name: mgd-https
        - name: mgd-ratelimit
        - name: mgd-headervalidation
